# IconEditor

./: .gitignore  CMakeLists.txt  README.md  colorbutton.cpp  colorbutton.h  colorbutton.ui  gridsettings.cpp  gridsettings.h  gridsettings.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  utils.cpp  utils.h
